[gd_scene load_steps=7 format=2]

[ext_resource path="res://солонка.png" type="Texture" id=1]
[ext_resource path="res://salt.gd" type="Script" id=2]
[ext_resource path="res://солонка_пс.png" type="Texture" id=3]
[ext_resource path="res://sound/Солонка.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 45.1425
height = 30.6232

[node name="salt" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="clickCol" type="CollisionShape2D" parent="."]
position = Vector2( 2.52101, -4.41176 )
shape = SubResource( 2 )

[node name="saltSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="input_event" from="." to="." method="_on_salt_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_salt_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_salt_mouse_exited"]
